Fix torproject.org/about/history/ is aligned to the left although the text is rtl

--- a/assets/scss/_portal.scss
+++ b/assets/scss/_portal.scss
@@ -7,7 +7,6 @@
   font-size: 22px;
   font-weight: 400;
   line-height: 36px;
-  text-align: left;
 }
 .preamble p {
   color: #777777;
